Changelog
=========

1.9.0 (unreleased)

- Include the exception message in the fallback e-mail.
  [davisagli]
  
- Add a view and action to FormFolders which summarizes the configuration of
  all Salesforce adapters.
  [jessesnyder]

1.9.0b1 (2010-12-23)

- Add fallback logic for when the adapter cannot write to Salesforce. In this
  case it will first try saving to an enabled savedata adapter, if present.
  Next it will try saving to a disabled savedata adapter, if present. Finally
  it will try sending an e-mail to the site's admin e-mail address. An e-mail
  is sent in all 3 cases to alert the administrator that writing to Salesforce
  failed. If one of the fallbacks succeeds, the user filling out the form will
  see the normal thank you page instead of an error.
  [davisagli]

1.8.0 (2010-12-01)

- Add a new option for what to do in update mode if no object is found:
  "Silently skip this and any subsequent Salesforce adapters"
  [davisagli]

1.7.0 (2010-11-16)

- Obtain an Id from adapters in update mode even if they don't have any fields
  mapped, so that that Id can be used from a chained adapter. This makes it
  possible to create objects with a lookup field to an existing object that
  is found by an arbitrary SOQL expression, rather than simply by its Id.
  [davisagli]

1.6.4 (2010-08-27)

- Fix regression introduced in 1.6.2 for salesforcepfgadapter subclasses
  that don't provide the creationMode field, only for real this time.
  [jbaldivieso]

1.6.3 (2010-08-15)

- Fix regression introduced in 1.6.2 for salesforcepfgadapter subclasses
  that don't provide the creationMode field.
  [davisagli]

1.6.2 (2010-08-03)

- Properly handle blank form fields in update mode by nullifying the
  corresponding Salesforce field.
  [yomatters]

1.6.1 (2010-03-26)

- Fix regressions in Plone 2.5.
  [davisagli]

- Fix regression in Plone 4 of timezone handling of datetimes when
  prepopulating fields.
  [davisagli]
